--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,1 @@
-{
-  "name": "Kanji Study",
-  "short_name": "Kanji Study",
-  "description": "Kanji Study App",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
-  "icons": [
-    {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
-}
+{"theme_color":"#ffffff","background_color":"#ffffff","icons":[{"purpose":"maskable","sizes":"512x512","src":"icon512_maskable.png","type":"image/png"},{"purpose":"any","sizes":"512x512","src":"icon512_rounded.png","type":"image/png"}],"orientation":"any","display":"standalone","dir":"auto","lang":"en-US","name":"Kanji Study App","short_name":"Kanji Study","start_url":"/","scope":"/"}
